<resources>
    <string name="app_name">Simplify Solutions</string>
    <string name="title_activity_new_dash">NewDash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_profile">View Profile</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_dash">Dashboard</string>
    <string name="menu_rate">Rate Calculator</string>
    <string name="menu_loc">Pickup Addresses</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_bill">Invoices</string>
    <string name="menu_chat">Chat with Us</string>
    <string name="menu_abt">About</string>
    <string name="menu_shar">Share App</string>
    <string name="menu_logout">Logout</string>
    <string-array name="Type">
        <item>Parcel</item>
        <item>Box</item>
        <item>Skid</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Sattellite Map</string>
    <string name="terrain_map">Terrain Map</string>
</resources>
