<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dash" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_calction"
            android:title="@string/menu_rate" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />


        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_loc" />

        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_menu_receipt"
            android:title="@string/menu_bill" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_abt" />
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_shar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
